--- a/check.ipynb
+++ b/check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,58 +12,312 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compound2unicode(text):\n",
+    "  #https://gist.github.com/redphx/9320735`\n",
+    "  text = text.replace(\"\\u0065\\u0309\", \"\\u1EBB\")    # ẻ\n",
+    "  text = text.replace(\"\\u0065\\u0301\", \"\\u00E9\")    # é\n",
+    "  text = text.replace(\"\\u0065\\u0300\", \"\\u00E8\")    # è\n",
+    "  text = text.replace(\"\\u0065\\u0323\", \"\\u1EB9\")    # ẹ\n",
+    "  text = text.replace(\"\\u0065\\u0303\", \"\\u1EBD\")    # ẽ\n",
+    "  text = text.replace(\"\\u00EA\\u0309\", \"\\u1EC3\")    # ể\n",
+    "  text = text.replace(\"\\u00EA\\u0301\", \"\\u1EBF\")    # ế\n",
+    "  text = text.replace(\"\\u00EA\\u0300\", \"\\u1EC1\")    # ề\n",
+    "  text = text.replace(\"\\u00EA\\u0323\", \"\\u1EC7\")    # ệ\n",
+    "  text = text.replace(\"\\u00EA\\u0303\", \"\\u1EC5\")    # ễ\n",
+    "  text = text.replace(\"\\u0079\\u0309\", \"\\u1EF7\")    # ỷ\n",
+    "  text = text.replace(\"\\u0079\\u0301\", \"\\u00FD\")    # ý\n",
+    "  text = text.replace(\"\\u0079\\u0300\", \"\\u1EF3\")    # ỳ\n",
+    "  text = text.replace(\"\\u0079\\u0323\", \"\\u1EF5\")    # ỵ\n",
+    "  text = text.replace(\"\\u0079\\u0303\", \"\\u1EF9\")    # ỹ\n",
+    "  text = text.replace(\"\\u0075\\u0309\", \"\\u1EE7\")    # ủ\n",
+    "  text = text.replace(\"\\u0075\\u0301\", \"\\u00FA\")    # ú\n",
+    "  text = text.replace(\"\\u0075\\u0300\", \"\\u00F9\")    # ù\n",
+    "  text = text.replace(\"\\u0075\\u0323\", \"\\u1EE5\")    # ụ\n",
+    "  text = text.replace(\"\\u0075\\u0303\", \"\\u0169\")    # ũ\n",
+    "  text = text.replace(\"\\u01B0\\u0309\", \"\\u1EED\")    # ử\n",
+    "  text = text.replace(\"\\u01B0\\u0301\", \"\\u1EE9\")    # ứ\n",
+    "  text = text.replace(\"\\u01B0\\u0300\", \"\\u1EEB\")    # ừ\n",
+    "  text = text.replace(\"\\u01B0\\u0323\", \"\\u1EF1\")    # ự\n",
+    "  text = text.replace(\"\\u01B0\\u0303\", \"\\u1EEF\")    # ữ\n",
+    "  text = text.replace(\"\\u0069\\u0309\", \"\\u1EC9\")    # ỉ\n",
+    "  text = text.replace(\"\\u0069\\u0301\", \"\\u00ED\")    # í\n",
+    "  text = text.replace(\"\\u0069\\u0300\", \"\\u00EC\")    # ì\n",
+    "  text = text.replace(\"\\u0069\\u0323\", \"\\u1ECB\")    # ị\n",
+    "  text = text.replace(\"\\u0069\\u0303\", \"\\u0129\")    # ĩ\n",
+    "  text = text.replace(\"\\u006F\\u0309\", \"\\u1ECF\")    # ỏ\n",
+    "  text = text.replace(\"\\u006F\\u0301\", \"\\u00F3\")    # ó\n",
+    "  text = text.replace(\"\\u006F\\u0300\", \"\\u00F2\")    # ò\n",
+    "  text = text.replace(\"\\u006F\\u0323\", \"\\u1ECD\")    # ọ\n",
+    "  text = text.replace(\"\\u006F\\u0303\", \"\\u00F5\")    # õ\n",
+    "  text = text.replace(\"\\u01A1\\u0309\", \"\\u1EDF\")    # ở\n",
+    "  text = text.replace(\"\\u01A1\\u0301\", \"\\u1EDB\")    # ớ\n",
+    "  text = text.replace(\"\\u01A1\\u0300\", \"\\u1EDD\")    # ờ\n",
+    "  text = text.replace(\"\\u01A1\\u0323\", \"\\u1EE3\")    # ợ\n",
+    "  text = text.replace(\"\\u01A1\\u0303\", \"\\u1EE1\")    # ỡ\n",
+    "  text = text.replace(\"\\u00F4\\u0309\", \"\\u1ED5\")    # ổ\n",
+    "  text = text.replace(\"\\u00F4\\u0301\", \"\\u1ED1\")    # ố\n",
+    "  text = text.replace(\"\\u00F4\\u0300\", \"\\u1ED3\")    # ồ\n",
+    "  text = text.replace(\"\\u00F4\\u0323\", \"\\u1ED9\")    # ộ\n",
+    "  text = text.replace(\"\\u00F4\\u0303\", \"\\u1ED7\")    # ỗ\n",
+    "  text = text.replace(\"\\u0061\\u0309\", \"\\u1EA3\")    # ả\n",
+    "  text = text.replace(\"\\u0061\\u0301\", \"\\u00E1\")    # á\n",
+    "  text = text.replace(\"\\u0061\\u0300\", \"\\u00E0\")    # à\n",
+    "  text = text.replace(\"\\u0061\\u0323\", \"\\u1EA1\")    # ạ\n",
+    "  text = text.replace(\"\\u0061\\u0303\", \"\\u00E3\")    # ã\n",
+    "  text = text.replace(\"\\u0103\\u0309\", \"\\u1EB3\")    # ẳ\n",
+    "  text = text.replace(\"\\u0103\\u0301\", \"\\u1EAF\")    # ắ\n",
+    "  text = text.replace(\"\\u0103\\u0300\", \"\\u1EB1\")    # ằ\n",
+    "  text = text.replace(\"\\u0103\\u0323\", \"\\u1EB7\")    # ặ\n",
+    "  text = text.replace(\"\\u0103\\u0303\", \"\\u1EB5\")    # ẵ\n",
+    "  text = text.replace(\"\\u00E2\\u0309\", \"\\u1EA9\")    # ẩ\n",
+    "  text = text.replace(\"\\u00E2\\u0301\", \"\\u1EA5\")    # ấ\n",
+    "  text = text.replace(\"\\u00E2\\u0300\", \"\\u1EA7\")    # ầ\n",
+    "  text = text.replace(\"\\u00E2\\u0323\", \"\\u1EAD\")    # ậ\n",
+    "  text = text.replace(\"\\u00E2\\u0303\", \"\\u1EAB\")    # ẫ\n",
+    "  text = text.replace(\"\\u0045\\u0309\", \"\\u1EBA\")    # Ẻ\n",
+    "  text = text.replace(\"\\u0045\\u0301\", \"\\u00C9\")    # É\n",
+    "  text = text.replace(\"\\u0045\\u0300\", \"\\u00C8\")    # È\n",
+    "  text = text.replace(\"\\u0045\\u0323\", \"\\u1EB8\")    # Ẹ\n",
+    "  text = text.replace(\"\\u0045\\u0303\", \"\\u1EBC\")    # Ẽ\n",
+    "  text = text.replace(\"\\u00CA\\u0309\", \"\\u1EC2\")    # Ể\n",
+    "  text = text.replace(\"\\u00CA\\u0301\", \"\\u1EBE\")    # Ế\n",
+    "  text = text.replace(\"\\u00CA\\u0300\", \"\\u1EC0\")    # Ề\n",
+    "  text = text.replace(\"\\u00CA\\u0323\", \"\\u1EC6\")    # Ệ\n",
+    "  text = text.replace(\"\\u00CA\\u0303\", \"\\u1EC4\")    # Ễ\n",
+    "  text = text.replace(\"\\u0059\\u0309\", \"\\u1EF6\")    # Ỷ\n",
+    "  text = text.replace(\"\\u0059\\u0301\", \"\\u00DD\")    # Ý\n",
+    "  text = text.replace(\"\\u0059\\u0300\", \"\\u1EF2\")    # Ỳ\n",
+    "  text = text.replace(\"\\u0059\\u0323\", \"\\u1EF4\")    # Ỵ\n",
+    "  text = text.replace(\"\\u0059\\u0303\", \"\\u1EF8\")    # Ỹ\n",
+    "  text = text.replace(\"\\u0055\\u0309\", \"\\u1EE6\")    # Ủ\n",
+    "  text = text.replace(\"\\u0055\\u0301\", \"\\u00DA\")    # Ú\n",
+    "  text = text.replace(\"\\u0055\\u0300\", \"\\u00D9\")    # Ù\n",
+    "  text = text.replace(\"\\u0055\\u0323\", \"\\u1EE4\")    # Ụ\n",
+    "  text = text.replace(\"\\u0055\\u0303\", \"\\u0168\")    # Ũ\n",
+    "  text = text.replace(\"\\u01AF\\u0309\", \"\\u1EEC\")    # Ử\n",
+    "  text = text.replace(\"\\u01AF\\u0301\", \"\\u1EE8\")    # Ứ\n",
+    "  text = text.replace(\"\\u01AF\\u0300\", \"\\u1EEA\")    # Ừ\n",
+    "  text = text.replace(\"\\u01AF\\u0323\", \"\\u1EF0\")    # Ự\n",
+    "  text = text.replace(\"\\u01AF\\u0303\", \"\\u1EEE\")    # Ữ\n",
+    "  text = text.replace(\"\\u0049\\u0309\", \"\\u1EC8\")    # Ỉ\n",
+    "  text = text.replace(\"\\u0049\\u0301\", \"\\u00CD\")    # Í\n",
+    "  text = text.replace(\"\\u0049\\u0300\", \"\\u00CC\")    # Ì\n",
+    "  text = text.replace(\"\\u0049\\u0323\", \"\\u1ECA\")    # Ị\n",
+    "  text = text.replace(\"\\u0049\\u0303\", \"\\u0128\")    # Ĩ\n",
+    "  text = text.replace(\"\\u004F\\u0309\", \"\\u1ECE\")    # Ỏ\n",
+    "  text = text.replace(\"\\u004F\\u0301\", \"\\u00D3\")    # Ó\n",
+    "  text = text.replace(\"\\u004F\\u0300\", \"\\u00D2\")    # Ò\n",
+    "  text = text.replace(\"\\u004F\\u0323\", \"\\u1ECC\")    # Ọ\n",
+    "  text = text.replace(\"\\u004F\\u0303\", \"\\u00D5\")    # Õ\n",
+    "  text = text.replace(\"\\u01A0\\u0309\", \"\\u1EDE\")    # Ở\n",
+    "  text = text.replace(\"\\u01A0\\u0301\", \"\\u1EDA\")    # Ớ\n",
+    "  text = text.replace(\"\\u01A0\\u0300\", \"\\u1EDC\")    # Ờ\n",
+    "  text = text.replace(\"\\u01A0\\u0323\", \"\\u1EE2\")    # Ợ\n",
+    "  text = text.replace(\"\\u01A0\\u0303\", \"\\u1EE0\")    # Ỡ\n",
+    "  text = text.replace(\"\\u00D4\\u0309\", \"\\u1ED4\")    # Ổ\n",
+    "  text = text.replace(\"\\u00D4\\u0301\", \"\\u1ED0\")    # Ố\n",
+    "  text = text.replace(\"\\u00D4\\u0300\", \"\\u1ED2\")    # Ồ\n",
+    "  text = text.replace(\"\\u00D4\\u0323\", \"\\u1ED8\")    # Ộ\n",
+    "  text = text.replace(\"\\u00D4\\u0303\", \"\\u1ED6\")    # Ỗ\n",
+    "  text = text.replace(\"\\u0041\\u0309\", \"\\u1EA2\")    # Ả\n",
+    "  text = text.replace(\"\\u0041\\u0301\", \"\\u00C1\")    # Á\n",
+    "  text = text.replace(\"\\u0041\\u0300\", \"\\u00C0\")    # À\n",
+    "  text = text.replace(\"\\u0041\\u0323\", \"\\u1EA0\")    # Ạ\n",
+    "  text = text.replace(\"\\u0041\\u0303\", \"\\u00C3\")    # Ã\n",
+    "  text = text.replace(\"\\u0102\\u0309\", \"\\u1EB2\")    # Ẳ\n",
+    "  text = text.replace(\"\\u0102\\u0301\", \"\\u1EAE\")    # Ắ\n",
+    "  text = text.replace(\"\\u0102\\u0300\", \"\\u1EB0\")    # Ằ\n",
+    "  text = text.replace(\"\\u0102\\u0323\", \"\\u1EB6\")    # Ặ\n",
+    "  text = text.replace(\"\\u0102\\u0303\", \"\\u1EB4\")    # Ẵ\n",
+    "  text = text.replace(\"\\u00C2\\u0309\", \"\\u1EA8\")    # Ẩ\n",
+    "  text = text.replace(\"\\u00C2\\u0301\", \"\\u1EA4\")    # Ấ\n",
+    "  text = text.replace(\"\\u00C2\\u0300\", \"\\u1EA6\")    # Ầ\n",
+    "  text = text.replace(\"\\u00C2\\u0323\", \"\\u1EAC\")    # Ậ\n",
+    "  text = text.replace(\"\\u00C2\\u0303\", \"\\u1EAA\")    # Ẫ\n",
+    "  return text\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['name_activity', 'type_activity', 'holder', 'time', 'name_place', 'address', 'reward', 'contact', 'register', 'works', 'joiner'])\n"
+      "dict_keys(['name_activity', 'type_activity', 'holder', 'time', 'name_place', 'address', 'reward', 'contact', 'register', 'works', 'joiner'])\n",
+      "------------------------works\n",
+      "hỗ trợ địa phương quét dọn nghĩa trang , chùa , trồng cây xanh trên đoạn đường quốc lộ dài hơn 2km\n",
+      "dọn dẹp và thu gom củi đốt hỗ trợ nấu ăn\n",
+      "hỗ trợ phát nước uống , quà bánh cho thí sinh và phhs\n",
+      "hỗ trợ công tác chuẩn bị cho đại hội\n",
+      "hỗ trợ hướng dẫn lớp cho phụ huynh nha\n",
+      "hỗ trợ chỉnh âm thanh ánh sáng , nhanh nhẹn\n",
+      "hỗ trợ gian hàng trò chơi\n",
+      "hỗ trợ cho chương trình\n",
+      "hỗ trợ người dân làm vườn chuẩn bị vụ xuân hè 2016\n",
+      "hỗ trợ quỹ khuyến học\n",
+      "hỗ trợ những người dân nghèo , khó khăn , giúp đỡ cho các em học sinh là đồng bào dân tộc thiểu số\n",
+      "báo cáo với người phụ trách chính khi xảy ra sự cố để được hướng dẫn , hỗ trợ cách xử lý\n",
+      "hỗ trợ các gian hàng trò chơi và gian hàng ẩm thực cho các em thiếu nhi\n",
+      "hỗ trợ hậu cần\n",
+      "hỗ trợ trận đấu ( bóng đá )\n",
+      "hỗ trợ người khuyết tật\n",
+      "phát triển năng lực và hỗ trợ bán sản phẩm của người lao động khuyết tật\n",
+      "hỗ trợ bán bí giúp đỡ bà con nông dân ea kar đắk lắk\n",
+      "hỗ trợ bác sĩ trên xe\n",
+      "hỗ trợ tìm kiếm các ứng viên tiềm năng cho các vị trí tuyển dụng của ngân hàng\n",
+      "hỗ trợ bán hàng\n",
+      "hỗ trợ gói giúp 700 con thú bông để tặng trẻ em có hoàn cảnh khó khăn\n",
+      "hỗ trợ thay nước ấm lau hạ nhiệt cho bé khi sốt , hỗ trợ pha sữa , thay tả , ẵm trẻ...\n",
+      "phân công các bạn hỗ trợ cho chiếu phim gây quỹ và hội thảo\n",
+      "hỗ trợ công tác quảng bá và tuyển sinh cho nhà trường\n",
+      "------------------------reward\n",
+      "kinh phí hỗ trợ\n",
+      "hỗ trợ chi phí đi lại 100.000VNĐ/đêm và 1 suất ăn đêm\n",
+      "được hỗ trợ máy ảnh\n",
+      "hỗ trợ nước uống\n",
+      "hỗ trợ ăn trưa\n",
+      "mức phí hỗ trợ : 30.000 vnđ/sinh viên\n",
+      "hỗ trợ đi lại 30k/2trận/1buổi\n",
+      "hỗ trợ cho các bạn phần ăn sáng\n",
+      "được tiền hỗ trợ của trường\n",
+      "hỗ trợ kinh phí đi lại ( đi và về tập trung ) , chi phí ăn uống\n",
+      "phần chi phí hỗ trợ từ ban triển khai đề án khảo sát nhân trắc học\n",
+      "có hỗ trợ ăn trưa\n",
+      "hỗ trợ thêm trên thục tế\n",
+      "được hỗ trợ miễn phí học phí và tài liệu\n",
+      "250k ngày 70k ( tiền ăn ) 35k ( tiền xăng ) 355k . hỗ trợ tiền xăng di chuyển giữa các tỉnh\n",
+      "hỗ trợ 50 học phí , còn 1.500.000 vnđ/người\n",
+      "hỗ trợ máy ảnh\n",
+      "gặp các bạn hỗ trợ viên dễ thương\n",
+      "nhận kinh phí hỗ trợ\n",
+      "được hỗ trợ điểm ctxh theo quy định hoặc hiện kim hỗ trợ\n",
+      "được hỗ trợ kinh phí : 25k/ buổi , 50k/ngày\n",
+      "------------------------type activity\n",
+      "tuyển hỗ trợ viên\n",
+      "hỗ trợ chương trình\n",
+      "hỗ trợ triễn lãm\n",
+      "buổi hỗ trợ\n",
+      "tuyển ctv hỗ trợ\n",
+      "hỗ trợ\n",
+      "hỗ trợ gây quỹ\n",
+      "------------------------holder\n",
+      "trung tâm hỗ trợ sinh viên & việc làm – trường đại học bách khoa\n",
+      "trung tâm hỗ trợ sinh viên và việc làm trường đại học bách khoa tp hcm\n",
+      "cơ quan hỗ trợ kỹ thuật quốc tế pháp expertise france\n",
+      "trung tâm hỗ trợ phát triển giáo dục hoà nhập hoa hướng dương\n",
+      "trung tâm hỗ trợ học sinh , sinh viên TP.HCM\n",
+      "trung tâm hỗ trợ học sinh , sinh viên\n",
+      "trung tâm hỗ trợ sinh viên & việc làm đh bách khoa tphcm\n",
+      "sac trung tâm hỗ trợ học sinh\n",
+      "trung tâm hỗ trợ sinh viên trường\n",
+      "trung tâm hỗ trợ sáng kiến phát triển cộng đồng ( scdi )\n",
+      "scdi trung tâm hỗ trợ và phát triển sáng kiến cộng đồng\n",
+      "câu lạc bộ hỗ trợ sinh viên trực tuyến ( osac )\n",
+      "trung tâm hỗ trợ sinh viên TP.HCM\n",
+      "ban quản lý tiểu dự án hỗ trợ phòng\n",
+      "đoàn tn hội sv tt hỗ trợ sv\n"
      ]
     }
    ],
    "source": [
-    "with open('real_dict_2000_new_only_delete_question_noti_new_and_space.json','r') as dict_file:\n",
+    "with open('real_dict_2000_new_only_delete_question_noti_new_and_space_newest.json','r') as dict_file:\n",
     "    real_dict = json.load(dict_file)\n",
     "    print(real_dict.keys())\n",
-    "    list_name_activity = real_dict['time']\n",
-    "    for name_activity in list_name_activity:\n",
-    "        if \"hội\" in name_activity:\n",
-    "            print(name_activity)\n",
+    "    list_holder = real_dict['holder']\n",
+    "    list_name_place = real_dict['name_place']\n",
+    "    list_name_activity = real_dict['name_activity']\n",
+    "    list_joiner = real_dict['joiner']\n",
+    "    list_type_activity = real_dict['type_activity']\n",
+    "    list_reward = real_dict['reward']\n",
+    "    list_works = real_dict['works']\n",
+    "    \n",
+    "    res = []\n",
+    "    \n",
+    "    print(\"------------------------works\")\n",
+    "    for works in list_works:\n",
+    "        if compound2unicode(\"hỗ trợ\") in compound2unicode(works):\n",
+    "            print(works)\n",
+    "            \n",
+    "    print(\"------------------------reward\")\n",
+    "    for reward in list_reward:\n",
+    "        if compound2unicode(\"hỗ trợ\") in compound2unicode(reward):\n",
+    "            print(reward)\n",
+    "            \n",
+    "    print(\"------------------------type activity\")\n",
+    "    for type_activity in list_type_activity:\n",
+    "        if compound2unicode(\"hỗ trợ\") in compound2unicode(type_activity):\n",
+    "            print(type_activity)\n",
+    "            \n",
+    "    print(\"------------------------holder\")\n",
+    "    for holder in list_holder:\n",
+    "        if compound2unicode(\"hỗ trợ\") in compound2unicode(holder):\n",
+    "            print(holder)\n",
+    "            \n",
+    "#     for name_activity in list_name_activity:\n",
+    "#         if \"sinh viên\" in name_activity:\n",
+    "#             print(name_activity)\n",
+    "#         if name_activity.find(\"chương trình\") == 0:\n",
+    "#             res.append(name_activity.replace(\"chương trình \",\"\"))\n",
+    "#         else:\n",
+    "#             res.append(name_activity)\n",
+    "# #     print(res)\n",
+    "#     real_dict['name_activity'] = res\n",
+    "#     with open('real_dict_2000_new_only_delete_question_noti_new_and_space_newest.json', 'w+') as new_dict_file:\n",
+    "#         json.dump(real_dict,new_dict_file,ensure_ascii=False)\n",
+    "# print(list_holder)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "769\n"
+      "494\n"
      ]
     }
    ],
    "source": [
-    "with open('temp_data/real_db_915.json','r') as db_file:\n",
+    "with open('temp_data/real_db_769.json','r') as db_file:\n",
     "    list_data = json.load(db_file)\n",
     "#     print(list_data)\n",
     "    res = list_data\n",
     "    for data in list_data:\n",
-    "        check_not_match_name_activity = False\n",
+    "        check_not_match_holder = False\n",
     "#         if 'name_activity' not in list(data.keys()):\n",
     "#             break\n",
-    "        for name_activity in data['name_activity']:\n",
-    "            if name_activity not in list_name_activity:\n",
-    "                check_not_match_name_activity = True\n",
+    "        for holder in data['holder']:\n",
+    "            if holder not in list_holder:\n",
+    "                check_not_match_holder = True\n",
     "                break\n",
-    "        if check_not_match_name_activity == True:\n",
+    "        if check_not_match_holder == True:\n",
     "            res.remove(data)\n",
+    "            \n",
+    "    for data in list_data:\n",
+    "        check_not_match_name_place = False\n",
+    "#         if 'name_activity' not in list(data.keys()):\n",
+    "#             break\n",
+    "        for name_place in data['name_place']:\n",
+    "            if name_place not in list_name_place:\n",
+    "                check_not_match_name_place = True\n",
+    "                break\n",
+    "        if check_not_match_name_place == True:\n",
+    "            res.remove(data)\n",
+    "    \n",
+    "    \n",
     "    print(len(res))\n",
-    "    with open('temp_data/real_db_769.json', 'w+') as new_db_file:\n",
+    "    with open('temp_data/real_db_494.json','w+') as new_db_file:\n",
     "        json.dump(res,new_db_file,ensure_ascii=False)\n",
     "    \n",
     "                \n",
