add 2 feature: done -> reset, anything with slot

--- a/check.ipynb
+++ b/check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -152,77 +152,17 @@
      "text": [
       "dict_keys(['name_activity', 'type_activity', 'holder', 'time', 'name_place', 'address', 'reward', 'contact', 'register', 'works', 'joiner'])\n",
       "------------------------works\n",
-      "hỗ trợ địa phương quét dọn nghĩa trang , chùa , trồng cây xanh trên đoạn đường quốc lộ dài hơn 2km\n",
-      "dọn dẹp và thu gom củi đốt hỗ trợ nấu ăn\n",
-      "hỗ trợ phát nước uống , quà bánh cho thí sinh và phhs\n",
-      "hỗ trợ công tác chuẩn bị cho đại hội\n",
-      "hỗ trợ hướng dẫn lớp cho phụ huynh nha\n",
-      "hỗ trợ chỉnh âm thanh ánh sáng , nhanh nhẹn\n",
-      "hỗ trợ gian hàng trò chơi\n",
-      "hỗ trợ cho chương trình\n",
-      "hỗ trợ người dân làm vườn chuẩn bị vụ xuân hè 2016\n",
-      "hỗ trợ quỹ khuyến học\n",
+      "giúp đỡ những gia đình khó khăn , sửa chữa lại hệ thống điện mất an toàn\n",
+      "giúp đỡ đội\n",
+      "giúp đỡ cho các bạn sinh viên có hoàn cảnh khó khăn\n",
+      "khuyên góp quần áo cũ và gạo để giúp đỡ bà con\n",
+      "giúp đỡ nhóm vận chuyển quà\n",
+      "san sẻ , giúp đỡ những người dân đồng bào vùng biên giới\n",
       "hỗ trợ những người dân nghèo , khó khăn , giúp đỡ cho các em học sinh là đồng bào dân tộc thiểu số\n",
-      "báo cáo với người phụ trách chính khi xảy ra sự cố để được hướng dẫn , hỗ trợ cách xử lý\n",
-      "hỗ trợ các gian hàng trò chơi và gian hàng ẩm thực cho các em thiếu nhi\n",
-      "hỗ trợ hậu cần\n",
-      "hỗ trợ trận đấu ( bóng đá )\n",
-      "hỗ trợ người khuyết tật\n",
-      "phát triển năng lực và hỗ trợ bán sản phẩm của người lao động khuyết tật\n",
+      "giúp đỡ các gia đình có hoàn cảnh khó khăn\n",
+      "giúp đỡ những người gặp hoàn cảnh khó khăn\n",
       "hỗ trợ bán bí giúp đỡ bà con nông dân ea kar đắk lắk\n",
-      "hỗ trợ bác sĩ trên xe\n",
-      "hỗ trợ tìm kiếm các ứng viên tiềm năng cho các vị trí tuyển dụng của ngân hàng\n",
-      "hỗ trợ bán hàng\n",
-      "hỗ trợ gói giúp 700 con thú bông để tặng trẻ em có hoàn cảnh khó khăn\n",
-      "hỗ trợ thay nước ấm lau hạ nhiệt cho bé khi sốt , hỗ trợ pha sữa , thay tả , ẵm trẻ...\n",
-      "phân công các bạn hỗ trợ cho chiếu phim gây quỹ và hội thảo\n",
-      "hỗ trợ công tác quảng bá và tuyển sinh cho nhà trường\n",
-      "------------------------reward\n",
-      "kinh phí hỗ trợ\n",
-      "hỗ trợ chi phí đi lại 100.000VNĐ/đêm và 1 suất ăn đêm\n",
-      "được hỗ trợ máy ảnh\n",
-      "hỗ trợ nước uống\n",
-      "hỗ trợ ăn trưa\n",
-      "mức phí hỗ trợ : 30.000 vnđ/sinh viên\n",
-      "hỗ trợ đi lại 30k/2trận/1buổi\n",
-      "hỗ trợ cho các bạn phần ăn sáng\n",
-      "được tiền hỗ trợ của trường\n",
-      "hỗ trợ kinh phí đi lại ( đi và về tập trung ) , chi phí ăn uống\n",
-      "phần chi phí hỗ trợ từ ban triển khai đề án khảo sát nhân trắc học\n",
-      "có hỗ trợ ăn trưa\n",
-      "hỗ trợ thêm trên thục tế\n",
-      "được hỗ trợ miễn phí học phí và tài liệu\n",
-      "250k ngày 70k ( tiền ăn ) 35k ( tiền xăng ) 355k . hỗ trợ tiền xăng di chuyển giữa các tỉnh\n",
-      "hỗ trợ 50 học phí , còn 1.500.000 vnđ/người\n",
-      "hỗ trợ máy ảnh\n",
-      "gặp các bạn hỗ trợ viên dễ thương\n",
-      "nhận kinh phí hỗ trợ\n",
-      "được hỗ trợ điểm ctxh theo quy định hoặc hiện kim hỗ trợ\n",
-      "được hỗ trợ kinh phí : 25k/ buổi , 50k/ngày\n",
-      "------------------------type activity\n",
-      "tuyển hỗ trợ viên\n",
-      "hỗ trợ chương trình\n",
-      "hỗ trợ triễn lãm\n",
-      "buổi hỗ trợ\n",
-      "tuyển ctv hỗ trợ\n",
-      "hỗ trợ\n",
-      "hỗ trợ gây quỹ\n",
-      "------------------------holder\n",
-      "trung tâm hỗ trợ sinh viên & việc làm – trường đại học bách khoa\n",
-      "trung tâm hỗ trợ sinh viên và việc làm trường đại học bách khoa tp hcm\n",
-      "cơ quan hỗ trợ kỹ thuật quốc tế pháp expertise france\n",
-      "trung tâm hỗ trợ phát triển giáo dục hoà nhập hoa hướng dương\n",
-      "trung tâm hỗ trợ học sinh , sinh viên TP.HCM\n",
-      "trung tâm hỗ trợ học sinh , sinh viên\n",
-      "trung tâm hỗ trợ sinh viên & việc làm đh bách khoa tphcm\n",
-      "sac trung tâm hỗ trợ học sinh\n",
-      "trung tâm hỗ trợ sinh viên trường\n",
-      "trung tâm hỗ trợ sáng kiến phát triển cộng đồng ( scdi )\n",
-      "scdi trung tâm hỗ trợ và phát triển sáng kiến cộng đồng\n",
-      "câu lạc bộ hỗ trợ sinh viên trực tuyến ( osac )\n",
-      "trung tâm hỗ trợ sinh viên TP.HCM\n",
-      "ban quản lý tiểu dự án hỗ trợ phòng\n",
-      "đoàn tn hội sv tt hỗ trợ sv\n"
+      "giúp đỡ , chia sẻ , đùm bọc bà con\n"
      ]
     }
    ],
@@ -242,27 +182,27 @@
     "    \n",
     "    print(\"------------------------works\")\n",
     "    for works in list_works:\n",
-    "        if compound2unicode(\"hỗ trợ\") in compound2unicode(works):\n",
+    "        if compound2unicode(\"giúp đỡ\") in compound2unicode(works):\n",
     "            print(works)\n",
     "            \n",
-    "    print(\"------------------------reward\")\n",
-    "    for reward in list_reward:\n",
-    "        if compound2unicode(\"hỗ trợ\") in compound2unicode(reward):\n",
-    "            print(reward)\n",
+    "#     print(\"------------------------reward\")\n",
+    "#     for reward in list_reward:\n",
+    "#         if compound2unicode(\"của\") in compound2unicode(reward) and compound2unicode(\"nhà\") in compound2unicode(reward) and compound2unicode(\"trường\") in compound2unicode(reward):\n",
+    "#             print(reward)\n",
     "            \n",
-    "    print(\"------------------------type activity\")\n",
-    "    for type_activity in list_type_activity:\n",
-    "        if compound2unicode(\"hỗ trợ\") in compound2unicode(type_activity):\n",
-    "            print(type_activity)\n",
+    "#     print(\"------------------------type activity\")\n",
+    "#     for type_activity in list_type_activity:\n",
+    "#         if compound2unicode(\"hỗ trợ\") in compound2unicode(type_activity):\n",
+    "#             print(type_activity)\n",
     "            \n",
-    "    print(\"------------------------holder\")\n",
-    "    for holder in list_holder:\n",
-    "        if compound2unicode(\"hỗ trợ\") in compound2unicode(holder):\n",
-    "            print(holder)\n",
+    "#     print(\"------------------------holder\")\n",
+    "#     for holder in list_holder:\n",
+    "#         if compound2unicode(\"hỗ trợ\") in compound2unicode(holder):\n",
+    "#             print(holder)\n",
     "            \n",
-    "#     for name_activity in list_name_activity:\n",
-    "#         if \"sinh viên\" in name_activity:\n",
-    "#             print(name_activity)\n",
+    "#     for joiner in list_joiner:\n",
+    "#         if \"tham dự\" in joiner:\n",
+    "#             print(joiner)\n",
     "#         if name_activity.find(\"chương trình\") == 0:\n",
     "#             res.append(name_activity.replace(\"chương trình \",\"\"))\n",
     "#         else:\n",
