--- a/check.ipynb
+++ b/check.ipynb
@@ -635,186 +635,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\d\\d\\d?h \\d\\d\\d?h các buổi tối trong tuần \\( từ thứ \\d đến chủ nhật \\) , bắt đầu từ thứ \\d tuần này \\( \\d\\d?[/-]\\d\\d \\)\n",
-      "\\d\\d\\d?h\\d?\\d?’ ngày \\d - \\d - \\d\\d\\d\\d \\( chủ nhật \\) \\d\\d?h\\d?\\d?’ ngày \\d\\d - \\d - \\d\\d\\d\\d \\( thứ \\d \\)\n",
-      "từ \\d\\d?h đến \\d\\d\\d?h các ngày chủ nhật . \\( \\d\\d?[/-]\\d\\d ; \\d[/-]\\d\\d ; \\d\\d?[/-]\\d\\d ; \\d\\d?[/-]\\d\\d \\)\n",
-      "chủ nhật , ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? , từ \\d\\d?h\\d?\\d? sáng , dự kiến kết thúc lúc \\d\\d\\d?h\\d?\\d?\n",
-      "\\d\\d?h\\d?\\d? - \\d\\d\\d?h\\d?\\d? chủ nhật ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? và \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "từ ngày \\d\\d?[/-]\\d\\d đến \\d\\d?[/-] \\d\\d?[/-] \\d\\d\\d\\d \\( vào các ngày thứ \\d , chủ nhật hàng tuần \\)\n",
-      "từ sáng thứ \\d , \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? đến trưa chủ nhật , \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "từ \\d\\d?h ngày \\d\\d?[/-]\\d \\d\\d\\d?h ngày \\d[/-]\\d\\d?[/-]\\d\\d\\d?\\d? . \\( thứ \\d & chủ nhật \\)\n",
-      "thứ \\d & chủ nhật hằng tuần từ \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "từ \\d\\d\\d?h\\d?\\d? đến \\d\\d\\d?h\\d?\\d? ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\( chủ nhật \\)\n",
-      "từ \\d\\d?h\\d?\\d?’ đến \\d\\d?h\\d?\\d? , ngày \\d\\d tháng \\d\\d .* \\d\\d\\d\\d \\( chủ nhật \\)\n",
-      "\\d\\d\\d?h\\d?\\d?’ – \\d\\d\\d?h\\d?\\d?’ ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\( chủ nhật \\)\n",
-      "\\d\\d?h\\d?\\d? đến \\d\\d\\d?h\\d?\\d? \\d\\d?[/-]\\d[/-]\\d\\d\\d?\\d? \\( nhằm ngày chủ nhật \\)\n",
-      "từ \\d\\d?h\\d?\\d? - \\d\\d\\d?h\\d?\\d? . \\( mỗi sáng thứ \\d hoặc mỗi sáng chủ nhật \\)\n",
-      "\\d\\d?h\\d?\\d?’ \\d\\d\\d?h\\d?\\d?’ , ngày \\d[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\( chủ nhật \\)\n",
-      "\\d\\d?h\\d?\\d? \\d\\d\\d?h\\d?\\d? ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\( chủ nhật \\)\n",
-      "thứ \\d[/-]\\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?chủ nhật \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "sáng chủ nhật tuần này , \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? lúc \\d\\d?h\\d?\\d? sáng\n",
-      "từ \\d\\dg\\d\\d đến \\d\\dg\\d\\d , ngày \\d\\d?[/-]\\d[/-]\\d\\d\\d?\\d? \\( chủ nhật \\)\n",
-      "\\d\\d?h\\d?\\d? - \\d\\d\\d?h\\d?\\d? chủ nhật , ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d?h\\d?\\d? – \\d\\d\\d?h , ngày \\d\\d tháng \\d\\d .* \\d\\d\\d\\d \\( chủ nhật \\)\n",
-      "\\d\\d?h\\d?\\d? \\d\\d?h\\d?\\d? , \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\( chủ nhật \\)\n",
-      "lúc \\d\\d?h\\d?\\d? ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\( sáng chủ nhật \\)\n",
-      "ngày mai chủ nhật \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? vào lúc \\d\\d\\d?h\\d?\\d?\n",
-      "kết thúc vào \\d\\d?h sáng chủ nhật \\( \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\)\n",
-      "\\d : \\d\\d \\d\\d : \\d\\d , chủ nhật , ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d?h - \\d\\d\\d?h\\d?\\d? , chủ nhật ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d?h\\d?\\d? đến \\d\\d\\d?h\\d?\\d? chủ nhật ngày \\d[/-]\\d[/-]\\d\\d\\d?\\d?\n",
-      "ngày mai , chủ nhật \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? đúng \\d\\d?h\\d?\\d?p\n",
-      "chủ nhật đầu tiên của mỗi tháng , bắt đầu từ tháng \\d[/-]\\d\\d\\d?\\d?\n",
-      "các ngày thứ \\d và chủ nhật từ ngày \\d\\d?[/-]\\d đến \\d\\d?[/-]\\d\\d  \n",
-      "\\d\\d?h\\d?\\d? \\( sáng chủ nhật \\) ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\dg\\d\\d – \\d\\dg\\d\\d ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\( chủ nhật \n",
-      "\\d\\dg\\d\\d \\d\\dg\\d\\d , chủ nhật , ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "chiều chủ nhật \\( \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\) , \\d\\d\\d?h\\d?\\d?\n",
-      "\\d\\d?h\\d?\\d? - \\d\\d\\d?h ngày \\d\\d - \\d\\d - \\d\\d\\d\\d \\( chủ nhật \\)\n",
-      "\\d\\d\\d?h\\d?\\d? \\d\\d\\d?h\\d?\\d? , ngày \\d\\d tháng \\d \\( chủ nhật \\)\n",
-      "ngày \\d\\d - \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\( thứ \\d , chủ nhật \\)\n",
-      "\\d\\d\\d?h\\d?\\d?’ ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\( chủ nhật \\)\n",
-      "bắt đầu từ \\d\\d\\d?h\\d?\\d? ngày \\d\\d.\\d\\d.\\d\\d\\d\\d \\( chủ nhật \\)\n",
-      "\\d\\d giờ \\d\\d , ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\( chủ nhật \\)\n",
-      "từ sáng đến chiều ngày chủ nhật , \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \n",
-      "\\d\\d\\d?h\\d?\\d? ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\( chủ nhật \\)\n",
-      "chủ nhật \\( \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\) , lúc \\d\\d?h\\d?\\d?\n",
-      "\\d\\d?h\\d?\\d? sáng chủ nhật , ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d\\d?h\\d?\\d? phút chủ nhật ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "từ \\d\\d\\d?h\\d?\\d? , chủ nhật ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\dg\\d\\d ngày mai , \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\( chủ nhật \\)\n",
-      "\\d\\d?h\\d?\\d? ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\( chủ nhật \\)\n",
-      "thứ .* , chủ nhật này , ngày \\d\\d , \\d\\d?[/-]\\d[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d?h\\d?\\d? sáng chủ nhật \\( \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\)\n",
-      "\\d giờ \\d\\d , ngày \\d\\d tháng \\d\\d .* \\d\\d\\d\\d \\( chủ nhật \\)\n",
-      "\\d\\d?h sáng hôm nay , chủ nhật ngày \\d\\d?[/-]\\d[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d \\d\\d : \\d\\d , chủ nhật , ngày \\d\\d?[/-]\\d[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d\\d?h\\d?\\d? chủ nhật \\( \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\) .\n",
-      " \\d\\d?h - \\d\\d\\d?h và \\d\\d\\d?h - \\d\\d\\d?h \\( trừ chủ nhật \\)\n",
-      "\\d\\d\\d?h\\d?\\d? chủ nhật nhằm ngày \\d\\d?[/-]\\d[/-]\\d\\d\\d?\\d? \n",
-      "chủ nhật , \\d\\d\\d?h\\d?\\d? ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d\\d?h\\d?\\d? ngày chủ nhật , \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d?h\\d?\\d? – \\d\\d\\d?h , chủ nhật , \\d[/-]\\d[/-]\\d\\d\\d?\\d?\n",
-      "thứ \\d , chủ nhật này , ngày \\d\\d , \\d\\d?[/-]\\d\\d?[/-]\\d\\d\n",
-      "\\d\\d \\d\\d : \\d\\d , chủ nhật , \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "chiều chủ nhật tuần sau \\( \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\)\n",
-      "thứ \\d hoặc chủ nhật \\( ngày \\d\\d?[/-]\\d và \\d\\d?[/-]\\d \\)\n",
-      "từ \\d\\d?h \\d\\d\\d?h ngày chủ nhật \\d[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d?h\\d?\\d? chủ nhật , ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d\\d?h\\d?\\d? chủ nhật ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\dg\\d\\d - \\d\\dg\\d\\d chủ nhật \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d?h\\d?\\d? sáng chủ nhật ngày \\d\\d?[/-]\\d[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d\\d?h\\d?\\d? ngày chủ nhật \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d\\d?h ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\( chủ nhật \\)\n",
-      "chủ nhật \\( \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\) \\d\\d?h\\d?\\d?\n",
-      "\\d\\d\\d?h trưa chủ nhật ngày mai , \\d[/-]\\d[/-]\\d\\d\\d?\\d?\n",
-      "chủ nhật lúc \\d\\dg\\d\\d ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\dg\\d\\d ngày \\d\\d tháng \\d .* \\d\\d\\d\\d \\( chủ nhật \\)\n",
-      "\\d\\d?h\\d?\\d? tối ngày thứ \\d tuần này tới sáng chủ nhật\n",
-      "\\d\\d\\d?h , chủ nhật , ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\dg\\d\\d , chủ nhật , ngày \\d\\d tháng \\d\\d .* \\d\\d\\d\\d\n",
-      "\\d\\d?h\\d?\\d? chủ nhật ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d?h - \\d\\d\\d?h\\d?\\d? chủ nhật \\d[/-]\\d[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d?h sáng chủ nhật này , \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d?h sáng chủ nhật ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d?h\\d?\\d? , chủ nhật ngày \\d\\d?[/-]\\d[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d\\d?h\\d?\\d? chủ nhật ngày \\d\\d?[/-]\\d[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d?h\\d?\\d?’ ngày \\d\\d - \\d - \\d\\d\\d\\d \\( chủ nhật \\)\n",
-      "bắt đầu vào lúc \\d\\d\\d?h chủ nhật tuần này \\d[/-]\\d\\d\n",
-      "chủ nhật tuần này , ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "chủ nhật tuần này \\( \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\)\n",
-      "\\d\\d?h\\d?\\d? , chủ nhật ngày \\d tháng \\d .* \\d\\d\\d\\d\n",
-      "\\d\\d\\d?h\\d?\\d? chủ nhật \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d\\d?h chủ nhật ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\d\\d?h\\d?\\d? chủ nhật ngày \\d[/-]\\d[/-]\\d\\d\\d?\\d?\n",
-      "chủ nhật tuần này \\( ngày \\d\\d - \\d\\d - \\d\\d\\d\\d \\)\n",
-      "vào lúc \\d\\d?h ngày \\d\\d.\\d.\\d\\d\\d\\d \\( chủ nhật \\)\n",
-      "\\d\\dg chủ nhật , ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "sáng chủ nhật , ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "thứ .* chủ nhật , ngày \\d\\d\\d\\d?[/-]\\d\\d?[/-]\\d\\d\n",
-      "sáng chủ nhật hàng tuần : \\d\\d?h\\d?\\d? - \\d\\d\\d?h\n",
-      "\\d\\d?h , chủ nhật , ngày \\d tháng \\d .* \\d\\d\\d\\d\n",
-      "sáng \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\( chủ nhật \\)\n",
-      "sáng chủ nhật \\( \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\)\n",
-      "sáng chủ nhật ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "ngày \\d\\d tháng \\d\\d .* \\d\\d\\d\\d nhằm chủ nhật\n",
-      "\\d\\d?h\\d?\\d? ngày \\d\\d?[/-]\\d\\d \\( chủ nhật \\)\n",
-      "chủ nhật này \\( ngày \\d\\d - \\d\\d - \\d\\d\\d\\d \\)\n",
-      "\\d\\d?h\\d?\\d? sáng ngày chủ nhật \\d.\\d.\\d\\d\\d\\d\n",
-      "\\d\\d?h\\d?\\d? ngày chủ nhật \\( \\d\\d?[/-]\\d\\d \\)\n",
-      "chủ nhật , ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "chủ nhật vừa rồi ngày \\d[/-]\\d[/-]\\d\\d\\d?\\d?\n",
-      "chiều chủ nhật \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "chủ nhật \\( \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d? \\)\n",
-      "\\d\\d\\d?h\\d?\\d? ngày \\d[/-]\\d \\( chủ nhật \\)\n",
-      "sáng chủ nhật \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "chủ nhật ngày \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "ngày chủ nhật \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "chủ nhật tuần này \\( \\d\\d.\\d\\d.\\d\\d\\d\\d \\)\n",
-      "\\d\\d?[/-]\\d[/-]\\d\\d\\d?\\d? \\( chủ nhật \\)\n",
-      "chủ nhật này ngày \\d\\d?[/-]\\d\\d lúc \\dg\n",
-      "\\d\\d?h sáng chủ nhật ngày \\d\\d?[/-]\\d\\d\n",
-      "chủ nhật ngày \\d[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "chủ nhật , ngày \\d tháng \\d .* \\d\\d\\d\\d\n",
-      " : chủ nhật ngày \\d\\d tháng \\d\\d .* \\d\n",
-      "chủ nhật \\d\\d?[/-]\\d\\d?[/-]\\d\\d\\d?\\d?\n",
-      "\\d\\dg ngày chủ nhật \\( \\d\\d?[/-]\\d \\)\n",
-      "\\d\\dg chủ nhật \\d\\d?[/-]\\d\\d?[/-]\\d\\d\n",
-      "\\d\\d : \\d\\d chủ nhật ngày \\d\\d?[/-]\\d\n",
-      "\\d\\d?h sáng \\d[/-]\\d\\d \\( chủ nhật \\)\n",
-      "\\d\\d\\d?h ngày \\d[/-]\\d \\( chủ nhật \\)\n",
-      "\\d\\d\\d?h\\d?\\d? buổi tối ngày chủ nhật\n",
-      "ngày chủ nhật \\d\\d?[/-]\\d\\d?[/-]\\d\\d\n",
-      "\\d\\d?h\\d?\\d? sáng chủ nhật hàng tuần\n",
-      "ngày chủ nhật \\d[/-]\\d[/-]\\d\\d\\d?\\d?\n",
-      "buổi sáng chủ nhật \\( \\d\\d?[/-]\\d \\)\n",
-      "chủ nhật , \\d\\d?[/-]\\d[/-]\\d\\d\\d?\\d?\n",
-      "chủ nhật này \\d[/-]\\d[/-]\\d\\d\\d?\\d?\n",
-      "chủ nhật \\d\\d?[/-]\\d[/-]\\d\\d\\d?\\d?\n",
-      "ngày \\d\\d?[/-]\\d\\d \\( chủ nhật \\)\n",
-      "ngày chủ nhật \\d\\d?[/-]\\d[/-]\\d\\d\n",
-      "\\d\\d\\d?h\\d?\\d? chủ nhật tuần này\n",
-      "chủ nhật này \\( \\d\\d?[/-]\\d\\d \\)\n",
-      "tối chủ nhật ngày \\d\\d?[/-]\\d\\d\n",
-      "chủ nhật \\d\\d?[/-]\\d\\d?[/-]\\d\\d\n",
-      "\\d\\d\\d?h chủ nhật ngày \\d[/-]\\d\n",
-      "sáng chủ nhật \\( \\d\\d?[/-]\\d \\)\n",
-      "chủ nhật \\d\\d?[/-]\\d[/-]\\d\\d\n",
-      "sáng chủ nhật \\d\\d?[/-]\\d\\d\n",
-      "chủ nhật lúc \\d\\d\\d?h\\d?\\d?\n",
-      "ngày chủ nhật \\d\\d?[/-]\\d\n",
-      "chủ nhật \\( \\d[/-]\\d \\)\n",
-      "chiều chủ nhật \\d[/-]\\d\n",
-      "chủ nhật \\d\\d?[/-]\\d\\d\n",
-      "thứ \\d và chủ nhật \\)\n",
-      "chìu chủ nhật \\d\\d?h\n",
-      "chủ nhật \\d\\d - \\d\n",
-      "chủ nhật \\d[/-]\\d\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open('list_constants.json','r') as constant_file:\n",
-    "    constant = json.load(constant_file)\n",
-    "    list_pattern_time = constant['list_pattern_time']\n",
-    "    res = []\n",
-    "    for pattern in list_pattern_time:\n",
-    "        if \"chủ nhật\" not in pattern:\n",
-    "            res.append(pattern)\n",
+    "# with open('list_constants.json','r') as constant_file:\n",
+    "#     constant = json.load(constant_file)\n",
+    "#     list_pattern_time = constant['list_pattern_time']\n",
+    "#     res = []\n",
+    "#     for pattern in list_pattern_time:\n",
+    "#         if \"chủ nhật\" not in pattern:\n",
+    "#             res.append(pattern)\n",
     "            \n",
-    "    constant['list_pattern_time'] = res\n",
-    "    with open('list_constants_new.json', 'w+') as new_constant_file:\n",
-    "        json.dump(constant,new_constant_file,ensure_ascii=False)\n",
+    "#     constant['list_pattern_time'] = res\n",
+    "#     with open('list_constants_new.json', 'w+') as new_constant_file:\n",
+    "#         json.dump(constant,new_constant_file,ensure_ascii=False)\n",
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('temp_data/real_db_494.json','r') as db_file:\n",
+    "    list_data = json.load(db_file)\n",
+    "    for data in list_data:\n",
+    "        for key, list_value in data.items():\n",
+    "            if key != '_id':\n",
+    "                list_value = [compound2unicode(value).lower() for value in list_value]\n",
+    "                data[key] = list(set(list_value))\n",
+    "    with open('temp_data/real_db_494_final.json','w+') as new_db_file:\n",
+    "        json.dump(list_data,new_db_file,ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
